--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,26 @@
+:root {
+  --primary: #7b2cbf;
+  --secondary: #240046;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
+}
+
+.navigation {
+  text-align: right;
+  padding: 1.2rem;
+}
+
+.navLink {
+  font-size: 1.3rem;
+  padding: 1.2rem;
+  text-decoration: none;
+  font-weight: 600;
 }
