--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,31 @@
   text-decoration: none;
   font-weight: 600;
 }
+
+.habits-list {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+}
+
+.habits-single,
+.habits-new {
+  width: 25rem;
+  border: 1px solid black;
+  background-color: aliceblue;
+  box-shadow: 0 2px 5px rgb(169, 169, 169);
+  margin: 2rem;
+  padding: 2rem;
+}
+
+.habits-new {
+  background-color: coral;
+  color: #fff;
+}
