style:css added

--- a/src/App.css
+++ b/src/App.css
@@ -36,19 +36,72 @@
 .flex {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .habits-single,
 .habits-new {
   width: 25rem;
-  border: 1px solid black;
   background-color: aliceblue;
   box-shadow: 0 2px 5px rgb(169, 169, 169);
   margin: 2rem;
   padding: 2rem;
+  border-radius: 5px;
 }
 
 .habits-new {
-  background-color: coral;
+  background-color: var(--primary);
   color: #fff;
+}
+
+.popup-bg-blur {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 1500;
+}
+
+.pop-up {
+  width: max-content;
+  height: max-content;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 1.5rem 2rem;
+  background-color: #fff;
+  box-shadow: 0 1px 5px rgb(208, 208, 208);
+  border-radius: 2px;
+}
+
+.popup-title {
+  padding: 1rem;
+}
+
+button {
+  padding: 0.5rem 1rem;
+  margin: 1rem;
+  font-size: 1rem;
+  color: #fff;
+  background-color: var(--primary);
+  font-weight: 500;
+  border-radius: 5px;
+  border: none;
+}
+
+button:hover {
+  background-color: var(--secondary);
+}
+
+button:active {
+  background-color: var(--primary);
+}
+
+input,
+select {
+  padding: 0.5rem 1rem;
+  margin: 1rem;
 }
